Fix main content float and sidebar jump

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -52,9 +52,12 @@
   margin-left: auto;
   margin-right: auto; }
 
-@media (max-width: 767px) {
+@media (max-width: 849px) {
   #sidebar {
     display: none; } }
+@media (min-width: 850px) {
+  #main {
+    float: left; } }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
